# windows-app-samples-rs

./: LICENSE  README.md
.meta/gen_table/: Cargo.toml
.meta/gen_table/src/: main.rs
colors/: Cargo.toml
colors/src/: main.rs
mrm/: Cargo.toml  deploy.cmd
mrm/src/: main.rs
