[package]
name = "sample"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies.windows]
version = "0.29"
features = [
    "std",
    "alloc"
]

[build-dependencies.windows-app]
git = "https://github.com/microsoft/windows-app-rs"
features = [
    "WindowsAppSdk_Foundation"
]

[dependencies.windows-app]
git = "https://github.com/microsoft/windows-app-rs"
features = [
    "WindowsAppSdk_Foundation",
    "Windows_ApplicationModel_Resources",
]
